# AID-MS3-2D_Wall_Mayur_V3

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  aidapp.cpp
resources/: _Pom_1_w.xobj3d  assets.qrc  generate_qrc.py  resources.qrc
resources/_Pom_1_w/: Object3d.xml  drawings.xml  lights.xml  materials.xml  models.xml  pens.xml
resources/interiorTileObjects/: tiles.qrc
resources/interiorTileObjects/Object3d/: Dorado29-8-x-29-8-cm.xobj3d  Phonique30x60x0.8cm.xobj3d  Vernisse10x10x0.85cm.xobj3d
resources/interiorequipmentobjects/: assets.qrc  dlc.json
resources/interiorequipmentobjects/Object3d/_@(3dD.001SofyFotele)/: _@(3dF.Fotel001).xobj3d  _@(3dF.Fotel002).xobj3d  _@(3dF.Fotel003).xobj3d  _@(3dF.Fotel004).xobj3d  _@(3dF.Fotel005).xobj3d  _@(3dF.Fotel006).xobj3d  _@(3dF.Fotel007).xobj3d  _@(3dF.Fotel008).xobj3d  _@(3dF.Fotel009).xobj3d  _@(3dF.Fotel010).xobj3d  _@(3dF.Fotel011).xobj3d  _@(3dF.Fotel012).xobj3d  _@(3dF.Fotel013).xobj3d  _@(3dF.Fotel014).xobj3d  _@(3dF.Fotel015).xobj3d  _@(3dF.Fotel016).xobj3d  _@(3dF.Fotel017).xobj3d  _@(3dF.Fotel018).xobj3d  _@(3dF.Fotel019).xobj3d  _@(3dF.Fotel020).xobj3d  _@(3dF.Fotel021).xobj3d  _@(3dF.Fotel022).xobj3d  _@(3dF.Fotel023).xobj3d  _@(3dF.Fotel024).xobj3d  _@(3dF.Fotel025).xobj3d  _@(3dF.Fotel026).xobj3d  _@(3dF.Fotel027).xobj3d  _@(3dF.Fotel028).xobj3d  _@(3dF.Fotel029).xobj3d  _@(3dF.Fotel030).xobj3d  _@(3dF.Fotel031).xobj3d  _@(3dF.Fotel032).xobj3d  _@(3dF.Fotel033).xobj3d  _@(3dF.Fotel034).xobj3d  _@(3dF.Fotel035).xobj3d  _@(3dF.Fotel036).xobj3d  _@(3dF.Fotel037).xobj3d  _@(3dF.Fotel038).xobj3d  _@(3dF.Fotel039).xobj3d  _@(3dF.Fotel040).xobj3d  (+120 more)
resources/interiorequipmentobjects/Object3d/_@(3dD.002StolyBiurkaKrzesla)/: _@(3dF.Biurko001).xobj3d  _@(3dF.Biurko002).xobj3d  _@(3dF.Biurko003).xobj3d  _@(3dF.Biurko004).xobj3d  _@(3dF.Biurko005).xobj3d  _@(3dF.Biurko006).xobj3d  _@(3dF.Biurko007).xobj3d  _@(3dF.Biurko008).xobj3d  _@(3dF.Biurko009).xobj3d  _@(3dF.Biurko010).xobj3d  _@(3dF.Biurko011).xobj3d  _@(3dF.Biurko012).xobj3d  _@(3dF.Biurko013).xobj3d  _@(3dF.Biurko014).xobj3d  _@(3dF.Biurko015).xobj3d  _@(3dF.Biurkodostawka001).xobj3d  _@(3dF.Biurkodostawka002).xobj3d  _@(3dF.Biurkodostawka003).xobj3d  _@(3dF.Biurkodostawka004).xobj3d  _@(3dF.Biurkodostawka005).xobj3d  _@(3dF.Biurkodostawka006).xobj3d  _@(3dF.Biurkodostawka007).xobj3d  _@(3dF.Biurkodostawka008).xobj3d  _@(3dF.Krzeslo020).xobj3d  _@(3dF.Krzeslo021).xobj3d  _@(3dF.Krzeslo022).xobj3d  _@(3dF.Krzeslo023).xobj3d  _@(3dF.Krzeslo024).xobj3d  _@(3dF.Krzeslo025).xobj3d  _@(3dF.Stol001).xobj3d  _@(3dF.Stol002).xobj3d  _@(3dF.Stol003).xobj3d  _@(3dF.Stol004).xobj3d  _@(3dF.Stol005).xobj3d  _@(3dF.Stol006).xobj3d  _@(3dF.Stol007).xobj3d  _@(3dF.Stol008).xobj3d  _@(3dF.Stol009).xobj3d  _@(3dF.Stol010).xobj3d  _@(3dF.Stolik001).xobj3d  (+30 more)
resources/interiorequipmentobjects/Object3d/_@(3dD.003LozkaMaterace)/: Thumbs.db  _@(3dF.LozkoPodwojne001).xobj3d  _@(3dF.LozkoPodwojne002).xobj3d  _@(3dF.LozkoPojedyncze001).xobj3d  _@(3dF.LozkoPojedyncze002).xobj3d  _@(3dF.LozkoPojedyncze003).xobj3d  _@(3dF.Toaletka001).xobj3d
resources/interiorequipmentobjects/Object3d/_@(3dD.004SzafyKomody)/: _@(3dF.Komoda001).xobj3d  _@(3dF.Komoda002).xobj3d  _@(3dF.Lawka001).xobj3d  _@(3dF.LawkaZLustrem001).xobj3d  _@(3dF.Lustro001).xobj3d  _@(3dF.Lustro002).xobj3d  _@(3dF.MalyStolik001).xobj3d  _@(3dF.RegalNaKsiazki001).xobj3d  _@(3dF.RegalNaKsiazki002).xobj3d  _@(3dF.RegalNaKsiazki003).xobj3d  _@(3dF.StolikNocny001).xobj3d  _@(3dF.Szafa001).xobj3d  _@(3dF.Szafa002).xobj3d  _@(3dF.Szafa003).xobj3d  _@(3dF.Szafa004).xobj3d  _@(3dF.Szafa005).xobj3d  _@(3dF.Szafa006).xobj3d  _@(3dF.Szafa007).xobj3d  _@(3dF.Szafa008).xobj3d  _@(3dF.Szafa009).xobj3d  _@(3dF.Szafa010).xobj3d  _@(3dF.Szafa011).xobj3d  _@(3dF.Szafa012).xobj3d  _@(3dF.Szafa013).xobj3d  _@(3dF.Szafa014).xobj3d  _@(3dF.Szafa015).xobj3d  _@(3dF.Szafa016).xobj3d  _@(3dF.Szafa017).xobj3d  _@(3dF.Szafa018).xobj3d  _@(3dF.Szafa019).xobj3d  _@(3dF.Szafa020).xobj3d  _@(3dF.Szafa021).xobj3d  _@(3dF.Szafa022).xobj3d  _@(3dF.Szafa023).xobj3d  _@(3dF.Szafa024).xobj3d  _@(3dF.Szafa025).xobj3d  _@(3dF.Szafa026).xobj3d  _@(3dF.Szafka001).xobj3d  _@(3dF.Szafka002).xobj3d  _@(3dF.Szafka003).xobj3d  (+15 more)
resources/interiorequipmentobjects/Object3d/_@(3dD.009RegalySzafkiRtvStoliki)/: _@(3dF.Kontener001).xobj3d  _@(3dF.Kontener002).xobj3d  _@(3dF.Kontener003).xobj3d  _@(3dF.Kredens001).xobj3d  _@(3dF.Regal001).xobj3d  _@(3dF.Regal002).xobj3d  _@(3dF.Regal003).xobj3d  _@(3dF.Regal004).xobj3d  _@(3dF.Regal005).xobj3d  _@(3dF.Regal006).xobj3d  _@(3dF.Regal007).xobj3d  _@(3dF.Regal008).xobj3d  _@(3dF.Regal009).xobj3d  _@(3dF.Regal010).xobj3d  _@(3dF.Regal011).xobj3d  _@(3dF.Regal012).xobj3d  _@(3dF.Regal013).xobj3d  _@(3dF.Regal014).xobj3d  _@(3dF.Regal015).xobj3d  _@(3dF.Regal016).xobj3d  _@(3dF.Regal017).xobj3d  _@(3dF.Regal018).xobj3d  _@(3dF.Regal019).xobj3d  _@(3dF.Regal020).xobj3d  _@(3dF.Regal021).xobj3d  _@(3dF.Regal022).xobj3d  _@(3dF.Regal023).xobj3d  _@(3dF.Regal024).xobj3d  _@(3dF.Regal025).xobj3d  _@(3dF.Regal026).xobj3d  (+18 more)
source/aidcommon/: aidcustdefines.h  aidmediator.h  aidobjmodel.h  aidtempdirmanager.h
source/application/private/: aidsession.cpp
source/application/public/: aidsession.h
source/parser/private/: Plane3D.cpp  aidparser.cpp
source/parser/public/: Line3D.h  Plane3D.h  aidparser.h
source/renderer/private/: aidcamera.cpp  aidoutlinematerial.cpp  aidrenderwindow.cpp
source/renderer/public/: aidcamera.h  aidoutlinematerial.h  aidrenderwindow.h
source/shader/: default.vert  outline.frag  outline.vert  shaders.qrc  test.frag
source/shader/old/: _test.frag  test.frag  test3.frag
source/ui/private/: aid2dViewDialog.cpp  aidmainwindow.cpp
source/ui/public/: aid2dViewDialog.h  aidmainwindow.h
